# geoip-http-rust

./: Cargo.toml
http_scripts/: geoip.http
src/: main.rs
src/geoip_response/: mod.rs
