[package]
name = "geoip-http-rust"
version = "0.1.0"
authors = ["José Olívio M. Pedrosa <root@rwx.ovh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
maxminddb = "0.13"
dns-lookup = "1.0"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"

[profile.release]
lto = true